src/snapshots/jjpwrgem__cli__tests__closed_curly.snap
---
source: src/cli.rs
expression: annotated
---
error: expected json value, found `}`
 --> stdin:1:1
  |
1 | }
  | ^
  |
help: consider adding the missing open curly brace
  |
1 | {}
  | +
